src/css/settings.css
@reference './index.css';

/* Container dialog */
dialog.settings-menu {
    /* Prevent display: none when closed (allow open animation to run) */
    @apply block text-base-content;

    /* Slide open animation */
    &[open] {
        & > .settings-contents {
            transform: translateX(0);
        }
    }

    /* Hide daisyui dialog backdrop (caused by showModal, need for esc key) */
    &::backdrop {
        @apply hidden;
    }
}

/* Wrapper inside dialog */
.settings-contents {
    @apply fixed inset-0 md:w-128 flex flex-col gap-8 p-4 z-99;

    /* Semi-transparent frosted background */
    backdrop-filter: blur(8px) saturate(180%);
    -webkit-backdrop-filter: blur(8px) saturate(180%);
    background-color: color-mix(in oklab, var(--color-base-200)75%, #0000);

    /* Translate off left edge of screen when closed */
    transform: translateX(-100%);

    /* Slide open/closed */
    transition: transform .3s ease;
}

.settings-grid {
    /* Two column grid, setting name in left, value + dropdown in right */
    /* Right is wide enough for button with 6-7 characters, left fills rest */
    @apply grid grid-cols-[minmax(0,1fr)_6.5rem];
    /* Prevent row height expanding when not enough rows to fill height */
    @apply content-start;
    /* Prevent vertical scrollbar when not overflowing */
    @apply flex-grow;
    /* Scroll vertically but not horizontally */
    @apply overflow-y-auto overflow-x-hidden;
}

/* Block scrolling while menu is open on mobile, allow on desktop */
:root:has(dialog.settings-menu[open]) {
    @apply overflow-hidden md:overflow-auto;
}

